--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <canvas id="myCanvas" width="500" height="500" style="background: #eee;"></canvas>
   </body>
   <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
-  <!--<script src="./jquery-3.2.1.min.js"></script>-->
   <script
           src="https://code.jquery.com/jquery-3.2.1.min.js"
           integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
@@ -20,6 +19,9 @@
           src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
           integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
           crossorigin="anonymous"></script>
+  <script src="./components/Draw.js"></script>
+  <script src="./components/Controls.js"></script>
+  <script src="./components/Game.js"></script>
   <script src="./renderer.js"></script>
   <script>if (window.module) module = window.module;</script>
 </html>
